adding APi GAteway and the discovery Server